push user activity to warehouse

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ edx.analytics.tasks =
     export-student-module = edx.analytics.tasks.database_exports:StudentModulePerCourseAfterImportWorkflow
     export-events = edx.analytics.tasks.event_exports:EventExportTask
     export-events-by-course = edx.analytics.tasks.event_exports_by_course:EventExportByCourseTask
-    user-activity = edx.analytics.tasks.user_activity:CourseActivityWeeklyTask
+    user-activity = edx.analytics.tasks.user_activity:UserActivityDataTask
     insert-into-table = edx.analytics.tasks.mysql_load:MysqlInsertTask
     database-import = edx.analytics.tasks.database_imports:ImportAllDatabaseTablesTask
     location-per-course = edx.analytics.tasks.location_per_course:LastCountryOfUser
