Added script to pull emr logs and display Traceback info.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ console_scripts =
     analyze-log = edx.analytics.tasks.tools.analyze.main:analyze
     s3util = edx.analytics.tasks.tools.s3util:main
     obfuscate-eval = edx.analytics.tasks.tools.obfuscate_eval:main
+    debug-emr-logs = edx.analytics.tasks.tools.debug_emr_logs:main
 
 edx.analytics.tasks =
 
