Add support for loading segment events.
* Add PruneEventPartitionsInVertica task.
* Acceptance test for loaded events into Vertica, using tracking log and segment log data.
* Add segment-logs override for acceptance.
* Move SchemaManagementTask to common.
* Add workflow entry point.

Note that non-ascii characters in input log files seem to break template substitition in event files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ edx.analytics.tasks =
     load-d-country = edx.analytics.tasks.warehouse.load_internal_reporting_country:LoadInternalReportingCountryToWarehouse
     load-d-user = edx.analytics.tasks.warehouse.load_internal_reporting_user:LoadInternalReportingUserToWarehouse
     load-d-user-course = edx.analytics.tasks.warehouse.load_internal_reporting_user_course:LoadUserCourseSummary
+    load-events = edx.analytics.tasks.warehouse.load_internal_reporting_events:TrackingEventRecordDataTask
     load-f-user-activity = edx.analytics.tasks.warehouse.load_internal_reporting_user_activity:LoadInternalReportingUserActivityToWarehouse
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlToVerticaTask
     load-warehouse = edx.analytics.tasks.warehouse.load_warehouse:LoadWarehouseWorkflow
