--- a/config/test.cfg
+++ b/config/test.cfg
@@ -27,6 +27,12 @@ expand_interval = 2 days
 source = s3://fake/input/
          s3://fake/input2/
 
+[segment-logs]
+pattern = .*segment.log-(?P<date>\d{8}).*\.gz
+          .*segment.notalog-(?P<date>\d{8}).*\.gz
+source = s3://fake/segment/input/
+         s3://fake/segment/input2/
+
 [event-export]
 output_root = s3://fake/
 environment = unittest
@@ -90,6 +96,7 @@ credentials = s3://fake/vertica_creds.json
 schema = testing
 read_timeout = 600
 roles = analyst
+event_retention_interval = 3 days
 
 [payment-reconciliation]
 transaction_source = s3://fake/warehouse/transactions
