--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
 install:
   - git clone https://github.com/$TRAVIS_REPO_SLUG.git $TRAVIS_REPO_SLUG
   - cd $TRAVIS_REPO_SLUG
-  - git checkout -qf $TRAVIS_PULL_REQUEST_SHA || git checkout -qf $TRAVIS_BRANCH
+  - git checkout -f ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}
 
 script:
   - make $MAKE_TARGET
