--- a/setup.cfg
+++ b/setup.cfg
@@ -97,6 +97,7 @@ edx.analytics.tasks =
     enrollment_validation = edx.analytics.tasks.monitor.enrollment_validation:CourseEnrollmentValidationTask
     overall_events = edx.analytics.tasks.monitor.overall_events:TotalEventsDailyTask
     noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask
+    mr_diff = edx.analytics.tasks.monitor.mr_diff:MapReduceDiff
     
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
