Update new code for luigi2.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -27,10 +27,8 @@ expand_interval = 2 days
 source = ["s3://fake/input/", "s3://fake/input2/"]
 
 [segment-logs]
-pattern = .*segment.log-(?P<date>\d{8}).*\.gz
-          .*segment.notalog-(?P<date>\d{8}).*\.gz
-source = s3://fake/segment/input/
-         s3://fake/segment/input2/
+pattern = [".*segment.log-(?P<date>\\\\d{8}).*\\\\.gz", ".*segment.notalog-(?P<date>\\\\d{8}).*\\\\.gz"]
+source = ["s3://fake/segment/input/", "s3://fake/segment/input2/"]
 
 [event-export]
 output_root = s3://fake/
@@ -94,9 +92,9 @@ access_token = acceptance
 credentials = s3://fake/vertica_creds.json
 schema = testing
 read_timeout = 600
-standard_roles = data_engineering_team
-restricted_roles = data_engineering_team
-business_intelligence_team_roles = data_engineering_team
+standard_roles = ["data_engineering_team"]
+restricted_roles = ["data_engineering_team"]
+business_intelligence_team_roles = ["data_engineering_team"]
 event_retention_interval = 3 days
 
 [payment-reconciliation]
@@ -138,7 +136,7 @@ alias = roster
 number_of_shards = 5
 
 [course-catalog-api]
-partner_short_codes = openedx
+partner_short_codes = ["openedx"]
 api_root_url = http://example.com/api/v1/
 
 [ccx]
