add in some counters

--- a/setup.cfg
+++ b/setup.cfg
@@ -97,7 +97,7 @@ edx.analytics.tasks =
     enrollment_validation = edx.analytics.tasks.monitor.enrollment_validation:CourseEnrollmentValidationTask
     overall_events = edx.analytics.tasks.monitor.overall_events:TotalEventsDailyTask
     noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask
-    grep = edx.analytics.tasks.tools:Grep
+    grep = edx.analytics.tasks.monitor.tools:Grep
     
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
