fix acceptance tests

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -95,7 +95,9 @@ access_token = acceptance
 credentials = s3://fake/vertica_creds.json
 schema = testing
 read_timeout = 600
-roles = analyst
+standard_roles = data_engineering_team
+restricted_roles = data_engineering_team
+business_intelligence_team_roles = data_engineering_team
 event_retention_interval = 3 days
 
 [payment-reconciliation]
