--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ edx.analytics.tasks =
     # common
     sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
     insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
+    insert-into-redshift = edx.analytics.tasks.common.redshift_load:RedshiftS3CopyToTable
     
     # insights                   
     answer-dist = edx.analytics.tasks.insights.answer_dist:AnswerDistributionPerCourse
