Ship metrics to Graphite directly.
Instead of first shipping metrics to statsd, and then onwards to
Graphite, we should just ship them directly to Graphite.

As far as I can tell, we were seeing issues were metrics were being
shipped from EMR master nodes to the Graphite machine we had running
statsd, over UDP, and things were being mysteriously dropped.

We'll be shipping via TCP now, which eliminates at least one variable.
We're also dropping the baggage of statsd defaults such as namespacing
metrics by type (like gauge vs counter) and automatic rate calculations,
etc.

--- a/scripts/collect-hadoop-metrics.yaml.example
+++ b/scripts/collect-hadoop-metrics.yaml.example
@@ -3,7 +3,7 @@ input:
   templates:
     - "{cluster_name}.{job_flow_id}.{job_name}.{job_index}.{metric}"
 output:
-  statsd:
+  graphite:
     host: localhost
-    port: 8125
+    port: 2003
     prefix: edx.analytics.emr
