Added tasks to load warehouse data into BigQueryy.

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ edx.analytics.tasks =
     # common
     sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
     insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
+    bigquery-load = edx.analytics.tasks.common.bigquery_load:BigQueryLoadTask
     
     # insights                   
     answer-dist = edx.analytics.tasks.insights.answer_dist:AnswerDistributionPerCourse
@@ -65,6 +66,7 @@ edx.analytics.tasks =
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlToVerticaTask
     load-internal-active-users = edx.analytics.tasks.warehouse.load_internal_reporting_active_users:LoadInternalReportingActiveUsersToWarehouse
     load-warehouse = edx.analytics.tasks.warehouse.load_warehouse:LoadWarehouseWorkflow
+    load-warehouse-bigquery=edx.analytics.tasks.warehouse.load_warehouse_bigquery:LoadWarehouseBigQueryTask
     push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.warehouse.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
     run-vertica-sql-script = edx.analytics.tasks.warehouse.run_vertica_sql_script:RunVerticaSqlScriptTask
     run-vertica-sql-scripts = edx.analytics.tasks.warehouse.run_vertica_sql_scripts:RunVerticaSqlScriptTask
