--- a/share/boto.cfg
+++ b/share/boto.cfg
@@ -3,5 +3,8 @@ metadata_service_timeout = 60.0
 metadata_service_num_attempts = 60
 [s3]
 use-sigv4 = True
+host = s3.eu-central-1.amazonaws.com
 [ec2]
 use-sigv4 = True
+host = s3.eu-central-1.amazonaws.com
+
