Added implementation for incremental processing of video.

--- a/config/test.cfg
+++ b/config/test.cfg
@@ -133,6 +133,7 @@ cybersource_merchant_ids = test
 
 [videos]
 dropoff_threshold = 0.05
+overwrite_n_days = 5
 
 [module-engagement]
 alias = roster
