--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -79,7 +79,7 @@ dropoff_threshold = 0.05
 
 [elasticsearch]
 # Point to the vagrant host's port 9201 where we assume elasticsearch is running
-host = http://172.17.0.1:9201/
+host = ["http://172.17.0.1:9201/"]
 
 [module-engagement]
 alias = roster
