--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ edx.analytics.tasks =
     # warehouse:
     catalog = edx.analytics.tasks.warehouse.course_catalog:CourseCatalogWorkflow
     event-type-dist = edx.analytics.tasks.warehouse.event_type_dist:PushToVerticaEventTypeDistributionTask
+    load-course-blocks = edx.analytics.tasks.warehouse.load_internal_reporting_course_blocks:LoadInternalReportingCourseBlocksToWarehouse    
     load-course-catalog = edx.analytics.tasks.warehouse.load_internal_reporting_course_catalog:PullCourseCatalogAPIData
     load-d-certificates = edx.analytics.tasks.warehouse.load_internal_reporting_certificates:LoadInternalReportingCertificatesToWarehouse
     load-d-country = edx.analytics.tasks.warehouse.load_internal_reporting_country:LoadInternalReportingCountryToWarehouse
