Fix package for local engine.

--- a/setup.cfg
+++ b/setup.cfg
@@ -96,5 +96,5 @@ edx.analytics.tasks =
     
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
-    local = luigi.hadoop:LocalJobRunner
+    local = luigi.contrib.hadoop:LocalJobRunner
     emu = edx.analytics.tasks.common.mapreduce:EmulatedMapReduceJobRunner
