Moved pycodestyle config to setup.cfg
pycodestyle reads from setup.cfg so there is no need for an additional file.

LEARNER-1745

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,8 +34,8 @@ edx.analytics.tasks =
     sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
     insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
     bigquery-load = edx.analytics.tasks.common.bigquery_load:BigQueryLoadTask
-    
-    # insights                   
+
+    # insights
     answer-dist = edx.analytics.tasks.insights.answer_dist:AnswerDistributionPerCourse
     calendar = edx.analytics.tasks.insights.calendar_task:CalendarTableTask
     course_blocks = edx.analytics.tasks.insights.course_blocks:CourseBlocksApiDataTask
@@ -92,8 +92,12 @@ edx.analytics.tasks =
     enrollment_validation = edx.analytics.tasks.monitor.enrollment_validation:CourseEnrollmentValidationTask
     overall_events = edx.analytics.tasks.monitor.overall_events:TotalEventsDailyTask
     noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask
-    
+
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
     local = luigi.hadoop:LocalJobRunner
     emu = edx.analytics.tasks.common.mapreduce:EmulatedMapReduceJobRunner
+
+[pycodestyle]
+ignore=E501
+max_line_length=119
