--- a/setup.cfg
+++ b/setup.cfg
@@ -99,5 +99,5 @@ mapreduce.engine =
     emu = edx.analytics.tasks.common.mapreduce:EmulatedMapReduceJobRunner
 
 [pycodestyle]
-ignore=E501
+ignore=E501,E731
 max_line_length=119
