Upgrade to fork of Luigi 2.7.

--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -23,9 +23,9 @@ engine = hadoop
 marker = hdfs://localhost:9000/edx-analytics-pipeline/marker/
 
 [event-logs]
-pattern = .*tracking.log.*
+pattern = [".*tracking.log.*"]
 expand_interval = 2 days
-source = hdfs://localhost:9000/data/
+source = ["hdfs://localhost:9000/data/"]
 
 [event-export]
 output_root = hdfs://localhost:9000/edx-analytics-pipeline/event-export/output/
@@ -58,13 +58,6 @@ output_root = hdfs://localhost:9000/edx-analytics-pipeline/activity/
 [enrollments]
 interval_start = 2013-11-01
 
-[enrollment-reports]
-src = hdfs://localhost:9000/data/
-destination = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/output/
-offsets = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/offsets.tsv
-blacklist = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/course_blacklist.tsv
-history = hdfs://localhost:9000/edx-analytics-pipeline/enrollment_reports/enrollment_history.tsv
-
 [financial-reports]
 shoppingcart-partners = {"DEFAULT": "edx"}
 
@@ -79,7 +72,7 @@ dropoff_threshold = 0.05
 
 [elasticsearch]
 # Point to the vagrant host's port 9201 where we assume elasticsearch is running
-host = http://172.17.0.1:9201/
+host = ["http://172.17.0.1:9201/"]
 
 [module-engagement]
 alias = roster
