--- a/config/test.cfg
+++ b/config/test.cfg
@@ -21,17 +21,14 @@ marker = s3://fake/marker/
 remote_log_level = DEBUG
 
 [event-logs]
-pattern = .*tracking.log-(?P<date>\d{8}).*\.gz
-          .*tracking.notalog-(?P<date>\d{8}).*\.gz
+# pattern = [".*tracking.log-(?P<date>\d{8}).*\.gz", ".*tracking.notalog-(?P<date>\d{8}).*\.gz"]
+pattern = [".*tracking.log-(?P<date>\\\\d{8}).*\\\\.gz", ".*tracking.notalog-(?P<date>\\\\d{8}).*\\\\.gz"]
 expand_interval = 2 days
-source = s3://fake/input/
-         s3://fake/input2/
+source = ["s3://fake/input/", "s3://fake/input2/"]
 
 [segment-logs]
-pattern = .*segment.log-(?P<date>\d{8}).*\.gz
-          .*segment.notalog-(?P<date>\d{8}).*\.gz
-source = s3://fake/segment/input/
-         s3://fake/segment/input2/
+pattern = [".*segment.log-(?P<date>\\\\d{8}).*\\\\.gz", ".*segment.notalog-(?P<date>\\\\d{8}).*\\\\.gz"]
+source = ["s3://fake/segment/input/", "s3://fake/segment/input2/"]
 
 [event-export]
 output_root = s3://fake/
@@ -69,13 +66,6 @@ overwrite_n_days = 14
 interval_start = 2013-11-01
 overwrite_n_days = 14
 
-[enrollment-reports]
-src = s3://fake/input/
-destination = s3://fake/enrollment_reports/output/
-offsets = s3://fake/enrollment_reports/offsets.tsv
-blacklist = s3://fake/enrollment_reports/course_blacklist.tsv
-history = s3://fake/enrollment_reports/enrollment_history.tsv
-
 [financial-reports]
 shoppingcart-partners = {"OpenCraftX": "OCX", "DEFAULT": "edx"}
 
@@ -96,9 +86,9 @@ access_token = acceptance
 credentials = s3://fake/vertica_creds.json
 schema = testing
 read_timeout = 600
-standard_roles = data_engineering_team
-restricted_roles = data_engineering_team
-business_intelligence_team_roles = data_engineering_team
+standard_roles = ["data_engineering_team"]
+restricted_roles = ["data_engineering_team"]
+business_intelligence_team_roles = ["data_engineering_team"]
 event_retention_interval = 3 days
 
 [payment-reconciliation]
@@ -129,8 +119,7 @@ host=test.cybersource.com/test
 interval_start = 2015-09-01
 
 [payment]
-cybersource_merchant_ids = test
-                           empty_test
+cybersource_merchant_ids = ["test", "empty_test"]
 
 [videos]
 dropoff_threshold = 0.05
@@ -141,7 +130,7 @@ alias = roster
 number_of_shards = 5
 
 [course-catalog-api]
-partner_short_codes = openedx
+partner_short_codes = ["openedx"]
 api_root_url = http://example.com/api/v1/
 
 [ccx]
