--- a/setup.cfg
+++ b/setup.cfg
@@ -93,6 +93,9 @@ edx.analytics.tasks =
     overall_events = edx.analytics.tasks.monitor.overall_events:TotalEventsDailyTask
     noop = edx.analytics.tasks.monitor.performance:ParseEventLogPerformanceTask
 
+    # enterprise:
+    enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
+
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
     local = luigi.contrib.hadoop:LocalJobRunner
