--- a/config/devstack.cfg
+++ b/config/devstack.cfg
@@ -112,14 +112,15 @@ report_fields = [
 report_output_root = /edx/src/problem-response-reports/
 
 [edx-rest-api]
-# Create using:
+# Create OAuth2 client (url doesn't matter):
 # ./manage.py lms --settings=devstack create_oauth2_client  \
-#   http://localhost:9999  # URL doesn't matter \
+#   http://localhost:9999
 #   http://localhost:9999/complete/edx-oidc/  \
 #   confidential \
 #   --client_name "Analytics Pipeline" \
 #   --client_id oauth_id \
 #   --client_secret oauth_secret \
+#   --user <staff_username> \
 #   --trusted
 client_id = oauth_id
 client_secret = oauth_secret
