--- a/config/luigi_docker.cfg
+++ b/config/luigi_docker.cfg
@@ -1,3 +1,9 @@
+[job-conf]
+# The third-party docker containers we use run everything as "root". Setting this environment variable on all child
+# processes allows us to write to HDFS as the hadoop user instead. Otherwise we end up writing a mix of "hadoop" user
+# owned files and "root" owned files, which are often not readable by the "hadoop" user.
+mapred.child.env = HADOOP_USER_NAME=hadoop
+
 [retcode]
 # The following return codes are the recommended exit codes for Luigi.
 # They are in increasing level of severity (for most applications).
@@ -67,6 +73,7 @@ output_root = hdfs://namenode:8020/edx-analytics-pipeline/activity/
 
 [enrollments]
 interval_start = 2013-11-01
+overwrite_n_days = 2
 
 [financial-reports]
 shoppingcart-partners = {"DEFAULT": "edx"}
@@ -80,9 +87,8 @@ interval = 2012-01-01-2020-01-01
 [videos]
 dropoff_threshold = 0.05
 
-#[elasticsearch]
-# Point to the vagrant host's port 9201 where we assume elasticsearch is running
-#host = ["http://172.17.0.1:9201/"]
+[elasticsearch]
+host = ["http://elasticsearch:9200/"]
 
 [module-engagement]
 alias = roster
