--- a/docker/spark_master/Dockerfile
+++ b/docker/spark_master/Dockerfile
@@ -11,7 +11,8 @@ ENV SPARK_MASTER_PORT=7077 \
     SPARK_HOME=/spark \
     PATH=$PATH:/spark/bin
 
-RUN cp /spark/conf/spark-defaults.conf.template /spark/conf/spark-defaults.conf \
+RUN apt-get -y update && apt-get -y install --reinstall python-pkg-resources \
+    && cp /spark/conf/spark-defaults.conf.template /spark/conf/spark-defaults.conf \
     && echo 'spark.master  spark://sparkmaster:7077\nspark.eventLog.enabled  true\nspark.eventLog.dir  hdfs://namenode:8020/tmp/spark-events\nspark.history.fs.logDirectory  hdfs://namenode:8020/tmp/spark-events' > /spark/conf/spark-defaults.conf
 
 EXPOSE 8080 7077 6066 18080 4040
