remove versions from file paths

--- a/config/luigi_docker.cfg
+++ b/config/luigi_docker.cfg
@@ -140,7 +140,8 @@ client_secret = oauth_secret
 
 [spark]
 master=spark://sparkmaster:7077
-edx_egg_files = ["/var/tmp/edx-ccx-keys-0.2.1/dist/edx_ccx_keys-0.2.1-py2.7.egg", "/var/tmp/edx-opaque-keys-0.4/dist/edx_opaque_keys-0.4-py2.7.egg"]
+# Follow the documentation to install these egg files
+edx_egg_files = ["/var/tmp/edx_egg_files/edx_ccx_keys.egg", "/var/tmp/edx_egg_files/edx_opaque_keys.egg"]
 driver-memory=2g
 executor-memory=3g
 executor-cores=2
