--- a/requirements/base.in
+++ b/requirements/base.in
@@ -1,5 +1,6 @@
 # These packages are required for bootstrapping.
 
+# Workaround for https://github.com/ansible/ansible/issues/8875
  --no-binary ansible
  
 ansible==1.4.5          # GPL v3 License
