--- a/requirements/default.in
+++ b/requirements/default.in
@@ -1,6 +1,8 @@
 # These packages are required for production
 # (along with extra.txt, which is manually maintained).
 
+-r base.txt
+
 argparse==1.2.1 	# Python Software Foundation License
 boto3==1.4.8            # Apache 2.0
 ciso8601==1.0.3         # MIT
@@ -14,6 +16,7 @@ html5lib==1.0b3 	# MIT
 isoweek==1.3.3		# BSD
 numpy==1.11.3 		# BSD
 paypalrestsdk==1.9.0    # Paypal SDK License
+psycopg2==2.6.2     # LGPL
 pygeoip==0.3.2 		# LGPL
 python-cjson==1.1.0	# LGPL
 python-dateutil==2.6.1 	# BSD
@@ -27,3 +30,7 @@ urllib3==1.22           # MIT
 user-agents==0.3.2	# MIT
 vertica-python==0.6.11  # MIT
 yarn-api-client==0.2.3  # BSD
+
+-e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
+
+-e git+https://github.com/edx/pyinstrument.git@a35ff76df4c3d5ff9a2876d859303e33d895e78f#egg=pyinstrument     # BSD
