First pass at clustering task on Spark.

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,7 @@ edx.analytics.tasks =
     student_engagement = edx.analytics.tasks.data_api.student_engagement:StudentEngagementTask
 
     # warehouse:
+    course-text-analysis = edx.analytics.tasks.warehouse.course_text_analysis:ClusterCoursesByTextTask
     event-type-dist = edx.analytics.tasks.warehouse.event_type_dist:PushToVerticaEventTypeDistributionTask
     load-course-catalog = edx.analytics.tasks.warehouse.load_internal_reporting_course_catalog:PullDiscoveryCoursesAPIData
     load-d-certificates = edx.analytics.tasks.warehouse.load_internal_reporting_certificates:LoadInternalReportingCertificatesToWarehouse
