Basic Spark support.

--- a/config/luigi_docker.cfg
+++ b/config/luigi_docker.cfg
@@ -140,8 +140,12 @@ client_secret = oauth_secret
 
 [spark]
 master=spark://sparkmaster:7077
-# Follow the documentation to install these egg files
-edx_egg_files = ["/var/tmp/edx_egg_files/edx_ccx_keys.egg", "/var/tmp/edx_egg_files/edx_opaque_keys.egg"]
 driver-memory=2g
 executor-memory=3g
 executor-cores=2
+
+# Follow the documentation to create and install these egg files, if needed.
+# You can also add other .egg or .zip files that you wish (or need) to prebuild.
+# Opaque_keys and ccx_keys need to be prebuilt because they cannot easily be built at runtime
+# to include metadata about their entry points, needed for opaque keys to work.
+prebuilt_python_modules = {"opaque_keys": "/var/tmp/edx_egg_files/edx_opaque_keys.egg", "ccx_keys": "/var/tmp/edx_egg_files/edx_ccx_keys.egg"}
