Use otto credentials for otto sqoop tasks.
Update unit and acceptance tests.

--- a/config/docker_test.cfg
+++ b/config/docker_test.cfg
@@ -97,6 +97,10 @@ catalog_url = http://acceptance.test/api/courses/v2
 api_root_url = acceptance.test
 access_token = acceptance
 
+[otto-database-import]
+database = otto
+credentials = s3://fake/otto_creds.json
+
 [vertica-export]
 credentials = s3://fake/vertica_creds.json
 schema = testing
