Spark mysql etl task

--- a/config/luigi_docker.cfg
+++ b/config/luigi_docker.cfg
@@ -149,3 +149,4 @@ executor-cores=2
 # Opaque_keys and ccx_keys need to be prebuilt because they cannot easily be built at runtime
 # to include metadata about their entry points, needed for opaque keys to work.
 prebuilt_python_modules = {"opaque_keys": "/var/tmp/edx_egg_files/edx_opaque_keys.egg", "ccx_keys": "/var/tmp/edx_egg_files/edx_ccx_keys.egg"}
+jars=/edx/app/hadoop/hive/lib/mysql-connector-java-5.1.29-bin.jar
