--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,7 @@ edx.analytics.tasks =
 
     # enterprise:
     enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
+    enterprise_enrollments_spark = edx.analytics.tasks.enterprise.enterprise_enrollments_spark:ImportEnterpriseEnrollmentsIntoMysqlSpark
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
