--- a/setup.cfg
+++ b/setup.cfg
@@ -97,6 +97,7 @@ edx.analytics.tasks =
 
     # enterprise:
     enterprise_enrollments = edx.analytics.tasks.enterprise.enterprise_enrollments:ImportEnterpriseEnrollmentsIntoMysql
+    enterprise_user = edx.analytics.tasks.enterprise.enterprise_user:ImportEnterpriseUsersIntoMysql
 
 mapreduce.engine =
     hadoop = edx.analytics.tasks.common.mapreduce:MapReduceJobRunner
