--- a/requirements/default.in
+++ b/requirements/default.in
@@ -11,6 +11,7 @@ edx-opaque-keys==0.4    # AGPL
 elasticsearch==1.7.0    # Apache
 filechunkio==1.8	# MIT
 google-cloud-bigquery==0.27.0
+google-api-python-client==1.7.7
 graphitesend==0.10.0    # Apache
 html5lib==1.0b3 	# MIT
 isoweek==1.3.3		# BSD
@@ -20,6 +21,9 @@ psycopg2==2.6.2     # LGPL
 pygeoip==0.3.2 		# LGPL
 python-cjson==1.1.0	# LGPL
 python-dateutil==2.6.1 	# BSD
+# There seems to be an issue(see: https://pagure.io/python-daemon/issue/18) with dependency installation on the
+# latest version of python-daemon(2.2.0), so we pin it to an earlier version.
+python-daemon==2.1.2
 python-gnupg==0.3.9	# BSD
 pytz==2017.3		# ZPL
 requests==2.18.4        # Apache 2.0
