JSON to parquet conversion job

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ edx.analytics.tasks =
     tags-dist = edx.analytics.tasks.insights.tags_dist:TagsDistributionPerCourse
     user-activity = edx.analytics.tasks.insights.user_activity:InsertToMysqlCourseActivityTask
     video = edx.analytics.tasks.insights.video:InsertToMysqlAllVideoTask
+    eventlog_conversion = edx.analytics.tasks.insights.eventlog_conversion:EventLogConversionSparkTask
 
     # data_api
     grade-dist = edx.analytics.tasks.data_api.studentmodule_dist:GradeDistFromSqoopToMySQLWorkflow
