--- a/requirements/default.in
+++ b/requirements/default.in
@@ -34,6 +34,7 @@ urllib3==1.22           # MIT
 user-agents==0.3.2	# MIT
 vertica-python==0.6.11  # MIT
 yarn-api-client==0.2.3  # BSD
+snowflake-connector-python==1.7.9
 
 -e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
 
