--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ edx.analytics.tasks =
     sqoop-import = edx.analytics.tasks.common.sqoop:SqoopImportFromMysql
     insert-into-table = edx.analytics.tasks.common.mysql_load:MysqlInsertTask
     bigquery-load = edx.analytics.tasks.common.bigquery_load:BigQueryLoadTask
+    snowflake-load = edx.analytics.tasks.common.snowflake_load:SnowflakeLoadTask
 
     # insights
     answer-dist = edx.analytics.tasks.insights.answer_dist:AnswerDistributionPerCourse
@@ -68,6 +69,7 @@ edx.analytics.tasks =
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlToVerticaTask
     load-warehouse = edx.analytics.tasks.warehouse.load_warehouse:LoadWarehouseWorkflow
     load-warehouse-bigquery=edx.analytics.tasks.warehouse.load_warehouse_bigquery:LoadWarehouseBigQueryTask
+    load-warehouse-snowflake=edx.analytics.tasks.warehouse.load_warehouse_snowflake:LoadWarehouseSnowflakeTask
     push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.warehouse.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
     run-vertica-sql-script = edx.analytics.tasks.warehouse.run_vertica_sql_script:RunVerticaSqlScriptTask
     run-vertica-sql-scripts = edx.analytics.tasks.warehouse.run_vertica_sql_scripts:RunVerticaSqlScriptTask
