--- a/setup.cfg
+++ b/setup.cfg
@@ -67,8 +67,10 @@ edx.analytics.tasks =
     load-internal-active-users = edx.analytics.tasks.warehouse.load_internal_reporting_active_users:LoadInternalReportingActiveUsersToWarehouse
     load-internal-course-structure = edx.analytics.tasks.warehouse.load_internal_reporting_course_structure:LoadCourseBlockRecordToVertica
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlToVerticaTask
+    load-mysql-database-snowflake = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlDatabaseToSnowflakeDatasetTask
     load-warehouse = edx.analytics.tasks.warehouse.load_warehouse:LoadWarehouseWorkflow
     load-warehouse-bigquery=edx.analytics.tasks.warehouse.load_warehouse_bigquery:LoadWarehouseBigQueryTask
+    load-warehouse-snowflake=edx.analytics.tasks.warehouse.load_warehouse_snowflake:LoadWarehouseSnowflakeTask
     push_to_vertica_lms_courseware_link_clicked = edx.analytics.tasks.warehouse.lms_courseware_link_clicked:PushToVerticaLMSCoursewareLinkClickedTask
     run-vertica-sql-script = edx.analytics.tasks.warehouse.run_vertica_sql_script:RunVerticaSqlScriptTask
     run-vertica-sql-scripts = edx.analytics.tasks.warehouse.run_vertica_sql_scripts:RunVerticaSqlScriptTask
