Add MySQL -> S3 -> Snowflake import via Luigi/Sqoop. Differentiate between Snowflake DB name and MySQL DB name. Improve logging upon failed Snowflake query. Insert a date into each stage name, so different stages can point to different dates of the same DB export.

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ edx.analytics.tasks =
     load-internal-active-users = edx.analytics.tasks.warehouse.load_internal_reporting_active_users:LoadInternalReportingActiveUsersToWarehouse
     load-internal-course-structure = edx.analytics.tasks.warehouse.load_internal_reporting_course_structure:LoadCourseBlockRecordToVertica
     load-internal-database = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlToVerticaTask
+    load-mysql-database-snowflake = edx.analytics.tasks.warehouse.load_internal_reporting_database:ImportMysqlDatabaseToSnowflakeDatasetTask
     load-warehouse = edx.analytics.tasks.warehouse.load_warehouse:LoadWarehouseWorkflow
     load-warehouse-bigquery=edx.analytics.tasks.warehouse.load_warehouse_bigquery:LoadWarehouseBigQueryTask
     load-warehouse-snowflake=edx.analytics.tasks.warehouse.load_warehouse_snowflake:LoadWarehouseSnowflakeTask
