--- a/requirements/default.in
+++ b/requirements/default.in
@@ -4,23 +4,23 @@
 -r base.txt
 
 argparse==1.2.1 	# Python Software Foundation License
-boto3==1.4.8            # Apache 2.0
+boto3==1.9.131          # Apache 2.0
 ciso8601==1.0.3         # MIT
 edx-ccx-keys==0.2.1     # AGPL
 edx-opaque-keys==0.4    # AGPL
 elasticsearch==1.7.0    # Apache
 filechunkio==1.8	# MIT
-google-cloud-bigquery==0.27.0
-google-api-python-client==1.7.7
+google-cloud-bigquery==1.11.2
+google-api-python-client==1.7.8
 graphitesend==0.10.0    # Apache
 html5lib==1.0b3 	# MIT
 isoweek==1.3.3		# BSD
 numpy==1.11.3 		# BSD
 paypalrestsdk==1.9.0    # Paypal SDK License
-psycopg2==2.6.2     # LGPL
+psycopg2==2.8.1         # LGPL
 pygeoip==0.3.2 		# LGPL
 python-cjson==1.1.0	# LGPL
-python-dateutil==2.6.1 	# BSD
+python-dateutil==2.7.5  # BSD
 # There seems to be an issue(see: https://pagure.io/python-daemon/issue/18) with dependency installation on the
 # latest version of python-daemon(2.2.0), so we pin it to an earlier version.
 python-daemon==2.1.2
@@ -35,7 +35,7 @@ user-agents==0.3.2	# MIT
 vertica-python==0.6.11  # MIT
 yarn-api-client==0.2.3  # BSD
 snowflake-connector-python==1.7.9
-
--e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
+httplib2==0.12.1
+luigi==2.8.3            # Apache License 2.0
 
 -e git+https://github.com/edx/pyinstrument.git@a35ff76df4c3d5ff9a2876d859303e33d895e78f#egg=pyinstrument     # BSD
