--- a/requirements/default.in
+++ b/requirements/default.in
@@ -13,6 +13,7 @@ filechunkio==1.8	# MIT
 google-cloud-bigquery==0.27.0
 google-api-python-client==1.7.7
 graphitesend==0.10.0    # Apache
+gspread==3.1.0    # MIT
 html5lib==1.0b3 	# MIT
 isoweek==1.3.3		# BSD
 numpy==1.11.3 		# BSD
