spike: Google sheets loading.

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,7 @@ edx.analytics.tasks =
     test-vertica-sqoop = edx.analytics.tasks.common.vertica_export:VerticaSchemaToBigQueryTask
     load-ga-permissions = edx.analytics.tasks.warehouse.load_ga_permissions:LoadGoogleAnalyticsPermissionsWorkflow
     load-vertica-schema-snowflake = edx.analytics.tasks.warehouse.load_vertica_schema_to_snowflake:VerticaSchemaToSnowflakeTask
+    load-google-sheet-warehouse = edx.analytics.tasks.warehouse.load_google_sheet_to_warehouse:LoadGoogleSheetToWarehouse
 
     # financial:
     cybersource = edx.analytics.tasks.warehouse.financial.cybersource:DailyPullFromCybersourceTask
