fixup! Add Affiliate Window pulls to finance reporting task

--- a/setup.cfg
+++ b/setup.cfg
@@ -85,7 +85,7 @@ edx.analytics.tasks =
     orders = edx.analytics.tasks.warehouse.financial.orders_import:OrderTableTask
     payment_reconcile = edx.analytics.tasks.warehouse.financial.reconcile:ReconcileOrdersAndTransactionsTask
     paypal = edx.analytics.tasks.warehouse.financial.paypal:PaypalTransactionsByDayTask
-    affiliate_window = edx.analytics.tasks.warehouse.financial.affiliate_window:DailyPullFromAffiliateWindowTask
+    affiliate_window = edx.analytics.tasks.warehouse.financial.affiliate_window:LoadFeesToWarehouse
 
     # export:
     data_obfuscation   = edx.analytics.tasks.export.data_obfuscation:ObfuscatedCourseDumpTask
