--- a/requirements/default.in
+++ b/requirements/default.in
@@ -14,11 +14,11 @@ google-cloud-bigquery==0.27.0
 google-api-python-client==1.7.7
 graphitesend==0.10.0    # Apache
 gspread==3.1.0    # MIT
-html5lib==1.0b3 	# MIT
+html5lib	# MIT
 isoweek==1.3.3		# BSD
-numpy==1.11.3 		# BSD
+numpy		# BSD
 paypalrestsdk==1.9.0    # Paypal SDK License
-psycopg2==2.6.2     # LGPL
+psycopg2-binary # LGPL
 pygeoip==0.3.2 		# LGPL
 python-cjson==1.1.0	# LGPL
 python-dateutil==2.6.1 	# BSD
