--- a/requirements/test.in
+++ b/requirements/test.in
@@ -15,7 +15,7 @@ httpretty==0.8.14
 mock==2.0.0
 nose-ignore-docstring==0.2
 nose==1.3.7
-pandas==0.13.0
+pandas
 
 # Stuff for development
 # edx-lint
